[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Fonts/PixelFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Resources/Styles/panel.tres" type="StyleBox" id=2]
[ext_resource path="res://Scripts/StatsContainer.gd" type="Script" id=3]

[node name="StatsContainer" type="HBoxContainer"]
margin_left = 4.0
margin_top = 217.0
margin_right = 176.0
margin_bottom = 231.0
grow_horizontal = 2
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 104
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApLabel" type="Label" parent="."]
visible = false
margin_left = 60.0
margin_right = 89.0
margin_bottom = 6.0
rect_min_size = Vector2( 29, 6 )
custom_fonts/font = ExtResource( 1 )
custom_constants/line_spacing = 0
text = "2324ap"
align = 1
valign = 1

[node name="EnergyLabelPanel" type="Panel" parent="."]
margin_right = 34.0
margin_bottom = 14.0
rect_min_size = Vector2( 34, 14 )
custom_styles/panel = ExtResource( 2 )

[node name="EnergyLabel" type="Label" parent="EnergyLabelPanel"]
margin_left = 3.0
margin_top = 4.0
margin_right = 30.0
margin_bottom = 10.0
rect_min_size = Vector2( 28, 6 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.113725, 0.654902, 0.2, 1 )
text = "3500Ep"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldLabelPanel" type="Panel" parent="."]
margin_left = 138.0
margin_right = 172.0
margin_bottom = 14.0
rect_min_size = Vector2( 34, 14 )
custom_styles/panel = ExtResource( 2 )

[node name="ShieldLabel" type="Label" parent="ShieldLabelPanel"]
margin_left = 3.0
margin_top = 4.0
margin_right = 30.0
margin_bottom = 10.0
rect_min_size = Vector2( 28, 6 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.113725, 0.654902, 0.2, 1 )
text = "2000Sp"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
